--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,72 +1,76 @@
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 745px) {
   .app-bar {
     grid-template-columns: 1fr auto;
     padding: 8px 32px;
   }
- 
-  .app-bar .app-bar__brand h1 {
+  .brand h1 {
     font-size: 1.5em;
   }
- 
-  .app-bar .app-bar__menu {
+  
+
+  .menu {
     display: none;
   }
- 
-  .app-bar .app-bar__navigation {
+
+  .navigation {
     position: static;
     width: 100%;
-  }
- 
-  .app-bar .app-bar__navigation ul li {
+  }      
+  .navigation ul li {
     display: inline-block;
   }
- 
-  .app-bar .app-bar__navigation ul li a {
+  .navigation ul li a {
     display: inline-block;
     width: 120px;
     text-align: center;
     margin: 0;
   }
- 
-  .movies {
-    grid-template-columns: 1fr 1fr;
-  }
- 
-  .movie {
-    grid-template-columns: auto 1fr;
-  }
- 
-  .movie .movie__title {
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
- 
-  .movie .movie__overview {
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
 }
- 
-@media screen and (min-width: 800px) {
-  .app-bar .app-bar__brand h1 {
-    font-size: 2em;
-  }
-}
- 
-@media screen and (min-width: 850px) {
-  .movies {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
- 
 @media screen and (min-width: 1200px) {
-  .movies {
-    grid-template-columns: repeat(4, 1fr);
+  .jumbotron {
+    min-width: 1000px;
+  }
+  main {
+    max-width: 1200px;
   }
 }
- 
-@media screen and (min-width: 1600px) {
-  .movies {
-      grid-template-columns: repeat(5, 1fr);
+
+@media screen and (min-width: 650px) {
+  .list_items-content {
+    padding: 16px 32px 32px 32px;
+  }
+  .list_items-title {
+    font-size: 18px;
+  }
+
+  .list_items-description {
+    font-size: 14px;
+  }
+  .restaurants__image{
+    width: 100%;
+    padding: 5px;
+  }
+
+}
+@media screen and (min-width: 450px){
+  .restaurants__image {
+      width: 100%;
+      padding: 5px;
+    }
+}
+
+@media screen and (min-width: 700px) {
+  .list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 16px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
