--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@
     <a href="#mainContent" class="skip-link">Menuju ke konten</a>
     <app-bar></app-bar>
 
-    <jumbotran-element></jumbotran-element>
+    <jumbotron-element></jumbotron-element>
 
     <main id="mainContent">
     </main>
