--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -106,3 +106,183 @@ button {
   font-weight: 600;
   text-shadow: 1px 1px #141414;
 }
+/* Content */
+main {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.content {
+  padding: 32px;
+}
+
+.latest {
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.latest h1 {
+  font-weight: 700;
+  font-size: 2em;
+  margin-bottom: 50px;
+  color:#04552f ;
+}
+
+.list {
+  margin: 32px auto auto;
+  text-align: left;
+  display: grid;
+  grid-row-gap: 16px;
+}
+
+.city {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  border-radius: 5px;
+  background-color: #432c7a;
+  padding: 8px;
+  color: white;
+  font-size: 1.6em;
+}
+.card-list {
+  margin: 32px auto auto;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+}
+
+.card {
+  box-shadow: 0px 0px 10px rgba(122, 120, 120, 0.1);
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+}
+
+.kota {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  border-radius: 5px;
+  background-color: #04552f;
+  padding: 5px 10px 5px;
+  color: white;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.card_content {
+  padding: 16px;
+  
+}
+
+.card_thumb {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card_rating {
+  font-size: 11px;
+  text-transform: uppercase;
+  color: #999;
+  font-weight: 500;
+  text-align: left;
+}
+
+.card_rating_number {
+  width: 44px;
+  height: 44px;
+  color: #ff2d2d;
+  text-decoration: none;
+  font-size: 11px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.card_title {
+  min-width: 44px;
+  min-height: 44px;
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 5px;
+  transition: 0.3s opacity;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.card_title:hover {
+  opacity: 0.7;
+}
+
+.card_title a {
+  min-width: 44px;
+  min-height: 44px;
+  text-decoration: none;
+  color: #333;
+  font-size: 20px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.card_desc {
+  margin-top: auto;
+  font-size: 16px;
+  line-height: 1.5em;
+  color: #555;
+  text-align: justify;
+}
+
+.detailRestaurant {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.detailRestaurant .restaurant__image {
+  width: 100%;
+}
+
+.detailRestaurant .restaurant__info h4 {
+  padding-top:10px ;
+  padding-bottom: 10px;
+  color: #04552f;
+
+}
+.like {
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #db0000;
+
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  border-radius: 50%;
+  border: 0;
+
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+}
+.content {
+  margin: 0 auto;
+  min-height: 100%;
+}
+
+.content .content__heading {
+  padding: 10px;
+  text-align: center;
+  color: #04552f;
+}
