--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,7 +21,14 @@ body{
 .skip-link:focus {
   top: 0;
 }
+/*
+app-bar
+*/
 .app-bar{
+  width: 100%;
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
   background-color: #393646;
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -32,8 +39,12 @@ body{
   0 6px 6px rgba(0, 0, 0, 0.1);
 }
 .menu{
+  background-color: #393646;
+  width: 100%;
   display: flex;
-    align-items: center; 
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 button {
   background-color: transparent;
@@ -48,19 +59,19 @@ button {
   align-items: center;
 }
 .judul h1 {
-  color:#F4EEE0;
+  color:white;
   text-transform: uppercase;
   font-size: 24px;
   user-select: none;
   padding: 10px;
 }
 .navigation {
-  position: absolute;
-  top: 30px;
-  left: -180px;
-  width: 150px;
-  transition: all 0.3s;
-  overflow: hidden;
+  background-color: #393646;
+  width: 100%;
+  display: flex;
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 .navigation ul {
   padding: 10px;
@@ -76,6 +87,9 @@ button {
 .open {
   left: 0;
 }
+/*
+jumbotron
+*/
 .jumbotron {
   display: flex;
   align-items: center;
@@ -157,65 +171,58 @@ main {
 }
 
 .card {
-  box-shadow: 0px 0px 10px rgba(122, 120, 120, 0.1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
-  border: 1px solid #ccc;
   border-radius: 5px;
   overflow: hidden;
   position: relative;
 }
 
-.kota {
+.city {
   position: absolute;
   top: 8px;
   left: 16px;
-  border-radius: 5px;
-  background-color: #04552f;
+  border-radius: 10px;
+  background-color: #6D5D6E;
   padding: 5px 10px 5px;
-  color: white;
+  color: #F4EEE0;
   font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+  font-size: 2em;
 }
 
 .card_content {
-  padding: 16px;
+  padding: 12px;
   
 }
 
 .card_thumb {
   width: 100%;
-  height: 200px;
+  max-height: 150px;
   object-fit: cover;
 }
 
 .card_rating {
-  font-size: 11px;
+  font-size: 16px;
   text-transform: uppercase;
-  color: #999;
-  font-weight: 500;
-  text-align: left;
+  color: #6D5D6E;
+  font-weight: 600;
 }
 
 .card_rating_number {
-  width: 44px;
-  height: 44px;
-  color: #ff2d2d;
+  color: red;
   text-decoration: none;
-  font-size: 11px;
-  font-weight: bold;
-  display: inline-block;
+  padding: 12px;
+  margin-left: -10px;
+  min-height: 44px;
+  min-width: 44px;
 }
 
 .card_title {
-  min-width: 44px;
-  min-height: 44px;
+  color: black;
   font-weight: 500;
-  font-size: 18px;
-  margin-top: 5px;
+  font-size: 16px;
+  margin-top: 10px;
   transition: 0.3s opacity;
-  text-transform: uppercase;
-  letter-spacing: 1px;
 }
 
 .card_title:hover {
@@ -233,8 +240,9 @@ main {
 }
 
 .card_desc {
-  margin-top: auto;
-  font-size: 16px;
+  font-family: "Barlow", sans-serif;
+  margin-top: -30px;
+  font-size: 12px;
   line-height: 1.5em;
   color: #555;
   text-align: justify;
