--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Restaurant Terbaik Di Indonesia" />
     <link rel="icon" href="./restaurant.png">
+    <link rel="manifest" href="./app.webmanifest">
+    <meta name="theme-color" content="#DB0000"/>
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <title>Restaurant</title>
   </head>
 
