--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="./app.webmanifest">
     <meta name="theme-color" content="#DB0000"/>
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
-    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
     <title>Restaurant</title>
   </head>
 
