--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Restaurant Terbaik Di Indonesia" />
-    <link rel="icon" href="./restaurant.png">
+    <link rel="icon" href="./restaurant.png" crossorigin="anonymous">
     <link rel="manifest" href="./app.webmanifest">
     <meta name="theme-color" content="#DB0000"/>
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
     <title>Restaurant</title>
   </head>
