--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -58,7 +58,12 @@
       padding: 5px;
     }
 }
-
+@media screen and (min-width: 50px){
+  .restaurants__image {
+      width: 100%;
+      padding: 5px;
+    }
+}
 @media screen and (min-width: 700px) {
   .list {
     display: grid;
