--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -79,3 +79,17 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+@media screen and (max-width: 650px) {
+  .jumbotron{
+    background: url('../../dist/images/hero-image_1-small.jpg') no-repeat;
+    width: 100%;
+    background-size: cover;
+  }
+} 
+@media screen and (min-width: 650px) {
+  .jumbotron{
+    background: url('../../dist/images/hero-image_1-large.jpg') no-repeat;
+    width: 100%;
+    background-size: cover;
+  }
+} 
